--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="row">
+  <div class="col-md-4"></div>
+
+  <div class="col-md-4">
+        <a class="btn btn-block btn-social btn-lg btn-google" href="{{ url }}">
+            <i class="fa fa-dropbox"></i>Sign in with Google
+        </a>
+  </div>
+
+  <div class="col-md-4"></div>
+</div>
+{% endblock %}
